Minor updates to sampling strategy notebooks

--- a/0_Generate_sampling_strategy/00_collect_features.ipynb
+++ b/0_Generate_sampling_strategy/00_collect_features.ipynb
@@ -64,6 +64,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de3941d4-10ad-442c-8e31-950192603649",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create data and results directories if they don't exist\n",
+    "if not os.path.exists(\"data\"):\n",
+    "    os.makedirs(\"data\")\n",
+    "\n",
+    "if not os.path.exists(\"results\"):\n",
+    "    os.makedirs(\"results\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "539ee71e-008f-4de6-91d1-df693c64b704",
    "metadata": {},
@@ -159,7 +174,8 @@
    "source": [
     "area_of_interest_gdf = province_boundaries_gdf\n",
     "district_column = \"DISTRICT\"\n",
-    "output_prefix = \"data/2021_features_cropmasked\"\n",
+    "output_dir = \"data\"\n",
+    "output_prefix = \"2021_features_cropmasked\"\n",
     "\n",
     "file_list = []\n",
     "\n",
@@ -221,7 +237,7 @@
     "    output_data = (feature_list, crop_data_for_model)\n",
     "    \n",
     "    #pickle the data for later use\n",
-    "    pickle_file = f\"{output_prefix}_{district_name}.pickle\"\n",
+    "    pickle_file = f\"{output_dir}/{output_prefix}_{district_name}.pickle\"\n",
     "    file_list.append(pickle_file)\n",
     "\n",
     "    with open(pickle_file, \"wb\") as f:\n",
