--- a/0_Generate_sampling_strategy/01_fit_kmeans.ipynb
+++ b/0_Generate_sampling_strategy/01_fit_kmeans.ipynb
@@ -54,10 +54,10 @@
     "rng = np.random.default_rng(17)\n",
     "\n",
     "# Read in the district files:\n",
-    "input_prefix = \"data/2021_features_cropmasked\"\n",
+    "input_dir = \"data\"\n",
+    "input_prefix = \"2021_features_cropmasked\"\n",
     "\n",
-    "\n",
-    "files = glob.glob(\"{input_prefix}_*.pickle\")\n",
+    "files = glob.glob(f\"{input_dir}/{input_prefix}_*.pickle\")\n",
     "\n",
     "data_arrays = []\n",
     "\n",
