--- a/0_Generate_sampling_strategy/03_run_predictions.ipynb
+++ b/0_Generate_sampling_strategy/03_run_predictions.ipynb
@@ -28,7 +28,6 @@
     "from deafrica_tools.spatial import xr_rasterize\n",
     "from deafrica_tools.temporal import temporal_statistics, xr_phenology\n",
     "from feature_extraction import feature_layers\n",
-    "from sampling import random_sampling\n",
     "from sklearn.cluster import DBSCAN, KMeans\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -246,7 +245,8 @@
     "    district_crop_propotions_df = pd.DataFrame({'class': classes, 'count': district_class_counts})\n",
     "    district_crop_propotions_df[\"proportion\"] = district_crop_propotions_df[\"count\"]/total_pixels\n",
     "    \n",
-    "    "
+    "    proportion_file = f\"data/district_{district_name}_cropping_propotion_by_class_filtered.csv\"\n",
+    "    district_crop_propotions_df.to_csv(proportion_file)"
    ]
   }
  ],
