Ensure data and results folders exist at start of cleaning data

--- a/1_Prepare_samples_for_ML/00_data_cleaning.ipynb
+++ b/1_Prepare_samples_for_ML/00_data_cleaning.ipynb
@@ -57,6 +57,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8c6bf19-01a7-4194-8f4e-e9bf3d58a167",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create data and results directories if they don't exist\n",
+    "if not os.path.exists(\"data\"):\n",
+    "    os.makedirs(\"data\")\n",
+    "\n",
+    "if not os.path.exists(\"results\"):\n",
+    "    os.makedirs(\"results\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a79609fa-b793-46d9-b742-71bfca647496",
    "metadata": {},
@@ -71,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "samples_file = \"data/Cleaned_ECAAS_ODK_Datasheet.csv\"\n",
+    "samples_file = \"data/datasheet.csv\"\n",
     "samples_df = pd.read_csv(samples_file)"
    ]
   },
@@ -442,10 +457,6 @@
     "    \"secondary_crop\": \"sec_crop\",\n",
     "    \"geometry\": \"geometry\",\n",
     "}\n",
-    "\n",
-    "# Create results directory if it doesn't exist\n",
-    "if not os.path.exists(\"results\"):\n",
-    "    os.makedirs(\"results\")\n",
     "    \n",
     "# Export polygons\n",
     "if polygons_gdf is not None:\n",
