Minor updates to machine learning section

--- a/2_Machine_learning/00_Extract_training_data.ipynb
+++ b/2_Machine_learning/00_Extract_training_data.ipynb
@@ -7,9 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load_ext autoreload\n",
-    "# %autoreload 2\n",
-    "\n",
     "import os\n",
     "import geopandas as gpd\n",
     "import numpy as np\n",
@@ -22,6 +19,21 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "from feature_collection import feature_layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5c0b36d-a27e-4797-8b96-4956e97dae07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create data and results directories if they don't exist\n",
+    "if not os.path.exists(\"data\"):\n",
+    "    os.makedirs(\"data\")\n",
+    "\n",
+    "if not os.path.exists(\"results\"):\n",
+    "    os.makedirs(\"results\")"
    ]
   },
   {
@@ -47,7 +59,7 @@
    "outputs": [],
    "source": [
     "# Point to cleaned data from previous step\n",
-    "path = \"../1_Prepare_samples_for_ML/results/points.geojson\"\n",
+    "path = \"../1_Prepare_samples_for_ML/results/cleaned_points.geojson\"\n",
     "\n",
     "# Load input data\n",
     "input_data = gpd.read_file(path)"
@@ -243,31 +255,7 @@
     "\n",
     "# Export query to pickle file for future re-use\n",
     "with open('results/query.pickle', 'wb') as f:\n",
-    "    pickle.dump(query, f)\n",
-    "    \n",
-    "    \n",
-    "# time_ranges = {\n",
-    "#     \"Q3_2021\": slice(\"2021-08-01\", \"2022-10-31\"),\n",
-    "#     \"Q4_2021\": slice(\"2021-11-01\", \"2022-01-31\"),\n",
-    "#     \"Q1_2022\": slice(\"2022-02-01\", \"2022-04-30\"),\n",
-    "# }\n",
-    "# query.update({\"time_ranges\": time_ranges})\n",
-    "\n",
-    "# annual_geomedian_times = {\n",
-    "#     \"annual_2021\": \"2021-01-01\",\n",
-    "# }\n",
-    "# semiannual_geomedian_times = {\n",
-    "#     \"semiannual_2021_01\": \"2021-01-01\",\n",
-    "#     \"semiannual_2021_06\": \"2021-06-01\",\n",
-    "# }\n",
-    "# query.update(\n",
-    "#     {\n",
-    "#         \"annual_geomedian_times\": annual_geomedian_times,\n",
-    "#         \"semiannual_geomedian_times\": semiannual_geomedian_times,\n",
-    "#     }\n",
-    "# )\n",
-    "\n",
-    "# query"
+    "    pickle.dump(query, f)\n"
    ]
   },
   {
@@ -282,26 +270,7 @@
     "### When testing\n",
     "If you are testing a new feature collection function, it is suggested you set `parallel = False` below to switch back to serial mode. \n",
     "\n",
-    "You can also set `gdf = single_crops_subset.iloc[0:5, :].copy()` in the function call to only run the first five geometries.\n",
-    "\n",
-    "### Features of this model\n",
-    "\n",
-    "* S2 BIMONTHLY GEOMEDIANS\n",
-    "    * The geomedian is calculated for each two month period\n",
-    "    * There are three periods: 2, 4, and 6 months prior to the collection date\n",
-    "    * All bands + indices (NDVI, LAI, SAVI, MSAVI, MNDWI)\n",
-    "* S2 Annual GEOMEDIAN\n",
-    "    * The annual geomedian in the year prior to sampling\n",
-    "    *  All bands + indices (NDVI, LAI, SAVI, MSAVI, MNDWI)\n",
-    "* S1 BIMONTHLY GEOMEDIANS\n",
-    "    * The geomedian is calculated for each two month period\n",
-    "    * There are three periods: 2, 4, and 6 months prior to the collection date\n",
-    "    * VV and VH bands\n",
-    "* LANDSAT BIMONTHLY FRACTIONAL COVER\n",
-    "    * The median is caluclated for each two month period\n",
-    "    * There are three periods: 2, 4, and 6 months prior to the collection date\n",
-    "    \n",
-    "The total number of features from this collection is 73."
+    "You can also set `gdf = single_crops_subset.iloc[0:5, :].copy()` in the function call to only run the first five geometries."
    ]
   },
   {
@@ -364,14 +333,6 @@
     "#Export files to disk\n",
     "np.savetxt(output_file, model_input[:, model_col_indices], header=\" \".join(column_names), fmt=\"%4f\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba90e66c-37ad-439e-bde6-1fbab3d16065",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
