--- a/2_Machine_learning/01_Inspect_training_data.ipynb
+++ b/2_Machine_learning/01_Inspect_training_data.ipynb
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "# Training data file from previous step\n",
-    "data_path = \"results/training_data_singlepoints.txt\"\n",
+    "data_path = \"results/training_data_multipixel.txt\"\n",
     "\n",
     "# Dictionary with class labels from previous step\n",
     "labels_path = \"results/class_labels.json\""
@@ -226,7 +226,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_drop = [column for column in upper_tri.columns if any(upper_tri[column] > 0.9)]\n",
+    "corr_threshold = 0.9\n",
+    "\n",
+    "to_drop = [column for column in upper_tri.columns if any(upper_tri[column] > corr_threshold)]\n",
     "print(); print(to_drop)"
    ]
   },
@@ -238,7 +240,9 @@
    "outputs": [],
    "source": [
     "df1 = X.drop(to_drop, axis=1)\n",
-    "print(); print(df1.columns)"
+    "\n",
+    "print(\"Remaining columns after removing correlated features\")\n",
+    "print(df1.columns)"
    ]
   },
   {
@@ -265,12 +269,13 @@
     "order = np.argsort(model.feature_importances_)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(12, 8))\n",
-    "ax.bar(x=np.array(df1.columns)[order], height=model.feature_importances_[order])\n",
-    "ax.set_ylabel(\"Importance\", labelpad=10)\n",
-    "ax.set_xlabel(\"Feature\", labelpad=10)\n",
-    "ax.set_xticks(np.arange(len(df1.columns)))\n",
-    "ax.set_xticklabels(np.array(df1.columns)[order], rotation=90)\n",
-    "plt.tight_layout()\n",
+    "ax.barh(range(len(np.array(df1.columns)[order])), model.feature_importances_[order])\n",
+    "ax.set_xlabel(\"Importance\", fontsize=14)\n",
+    "ax.set_ylabel(\"Feature\", fontsize=14)\n",
+    "ax.set_yticks(np.arange(len(order)))\n",
+    "ax.set_yticklabels(np.array(df1.columns)[order], rotation=0, fontsize=8)\n",
+    "plt.ylim([-1,len(np.array(df1.columns)[order])])\n",
+    "plt.xlim(0, max(model.feature_importances_)+0.001)\n",
     "\n",
     "fig.savefig(f\"results/feature_importance_afterremovecorrelation.png\", dpi=300, bbox_inches=\"tight\", facecolor=\"white\")"
    ]
