--- a/2_Machine_learning/02_Fit_initial_classifier.ipynb
+++ b/2_Machine_learning/02_Fit_initial_classifier.ipynb
@@ -651,11 +651,11 @@
    "outputs": [],
    "source": [
     "# Get best estimated params for RF model\n",
-    "\n",
+    "prefered_model = models[0]\n",
     "outer_cv = StratifiedKFold(n_splits=outer_cv_splits, shuffle=True, random_state=cv_seed)\n",
     "\n",
     "metric = \"f1_macro\"\n",
-    "name, model, p_grid = models[0]  # Use random forest\n",
+    "name, model, p_grid = prefered_model\n",
     "\n",
     "# instatiate a gridsearchCV using outer cross-validation folds\n",
     "clf = GridSearchCV(\n",
