--- a/2_Machine_learning/03_Create_test_map.ipynb
+++ b/2_Machine_learning/03_Create_test_map.ipynb
@@ -121,18 +121,8 @@
     "model = load(model_path).set_params(n_jobs=1)\n",
     "\n",
     "# Choose file containing test areas and load\n",
-    "test_areas_file = \"data/border_striping_testarea.gpkg\"\n",
+    "test_areas_file = \"data/ml_test_areas.geojson\"\n",
     "test_areas_gdf = gpd.read_file(test_areas_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "58e3dc83-eec7-40b6-9c04-a9df1b0ac0f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model"
    ]
   },
   {
@@ -217,11 +207,9 @@
     "\n",
     "    # calculate features\n",
     "    data = feature_layers(query)\n",
-    "    print(len(data.data_vars))\n",
     "\n",
     "    # Only keep features that are in the original list of columns\n",
     "    data = data[features]\n",
-    "    print(len(data.data_vars))\n",
     "\n",
     "    # predict using the imported model\n",
     "    predicted = predict_xr(\n",
@@ -290,7 +278,7 @@
     "    # set limits .5 outside true range\n",
     "    mat = (\n",
     "        predictions[i]\n",
-    "        .Predictions.astype(int)\n",
+    "        .Predictions.astype(float)\n",
     "        .plot(\n",
     "            ax=axes[0],\n",
     "            cmap=cmap,\n",
