--- a/2_Machine_learning/04_Create_area_maps.ipynb
+++ b/2_Machine_learning/04_Create_area_maps.ipynb
@@ -114,15 +114,15 @@
    "outputs": [],
    "source": [
     "# Choose model and load\n",
-    "model_path = f\"results/{experiment_name}.joblib\"  #\"results/randomforest_model.joblib\"\n",
+    "model_path = f\"results/{experiment_name}.joblib\"\n",
     "model = load(model_path).set_params(n_jobs=1)\n",
     "\n",
     "# Choose file containing test areas and load\n",
-    "districts_file = \"data/area_redo_update.gpkg\" #\"data/gridded_province.shp\"\n",
+    "districts_file = \"data/gridded_province.shp\"\n",
     "districts_gdf = gpd.read_file(districts_file)\n",
     "\n",
     "# Set results path\n",
-    "results_path = \"data/area_redo\""
+    "results_path = \"data/\""
    ]
   },
   {
@@ -185,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "area_of_interest_gdf = districts_gdf\n",
+    "area_of_interest_gdf = districts_gdf.iloc[[0]]\n",
     "district_column = \"id\"\n",
     "\n",
     "dc = datacube.Datacube(app=\"crop_type_ml\")\n",
@@ -303,14 +303,6 @@
    "source": [
     "client.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5118855-6b2b-403e-b1a2-b19c522007bd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
