Move date ranges out of feature func
This moves the date ranges to be configurable in the first notebook, rather than being coded into the feature_collection.py file.

--- a/2_Machine_learning/00_Extract_training_data.ipynb
+++ b/2_Machine_learning/00_Extract_training_data.ipynb
@@ -220,7 +220,107 @@
    "id": "e5c782d1-4a22-4b09-9c1b-ba9b9d988774",
    "metadata": {},
    "source": [
-    "## Prepare query for feature extraction"
+    "## Prepare query for feature extraction\n",
+    "\n",
+    "The first step is to identify the date range you want to use as input to the machine learning process. This should be dates up to when your training data was collected in the field. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43a1a1b2-f98e-4826-a841-a2e701f495b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check start and end date of training data collection\n",
+    "start_date = single_crops_subset.start.min()\n",
+    "end_date = single_crops_subset.end.max()\n",
+    "\n",
+    "print(f\"Data collection start: {start_date}\")\n",
+    "print(f\"Data collection end: {end_date}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56c6230a-8999-4a1d-ba2e-c07554e52967",
+   "metadata": {},
+   "source": [
+    "The machine learning process uses median and geomedian products to ensure inputs are not affected by cloud cover. Using your understanding of when the data was collected, you will need to manually define the time periods you want to generate cloud-free median composites for. \n",
+    "\n",
+    "The next step is to manually configure the time periods for the composites you want to use. There are four types:\n",
+    "* `annual_geomedian_times`: Used to specify which annual geomedian to use\n",
+    "* `semiannual_geomedian_times`: Used to specify which semi-annual geomedians to use\n",
+    "* `s1_time_ranges`: Used to specify the periods for calculating medians for Sentinel-1\n",
+    "* `time_ranges`: Used for to specify the periods for calculating all other medians and geomedians\n",
+    "\n",
+    "Each of these is configured as a dictionary, where the key indicates the label to attribute to the data (used to distinguish features loaded for different time periods) and the value corresponds to the date or date range associated with that time period (in \"YYYY-MM-DD\" format).\n",
+    "\n",
+    "For data collected in April of 2022, here is an example:\n",
+    "\n",
+    "```\n",
+    "annual_geomedian_times = {\n",
+    "    \"annual_2021\": \"2021-01-01\",\n",
+    "}\n",
+    "\n",
+    "semiannual_geomedian_times = {\n",
+    "    \"semiannual_2021_01\": \"2021-01-01\",\n",
+    "    \"semiannual_2021_06\": \"2021-06-01\",\n",
+    "}\n",
+    "\n",
+    "s1_time_ranges = {\n",
+    "    \"Q3_2021\": slice(\"2021-08-01\", \"2022-10-31\"),\n",
+    "    \"Q4_2021\": slice(\"2021-11-01\", \"2022-01-31\"),\n",
+    "}\n",
+    "\n",
+    "time_ranges = {\n",
+    "    \"Q3_2021\": slice(\"2021-08-01\", \"2022-10-31\"),\n",
+    "    \"Q4_2021\": slice(\"2021-11-01\", \"2022-01-31\"),\n",
+    "    \"Q1_2022\": slice(\"2022-02-01\", \"2022-04-30\"),\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "This would load:\n",
+    "* One Digital Earth Africa annual geomedian for 2021\n",
+    "* Two Digital Earth Africa semi-annual geomedians, one in the first half of 2021, one in the second half of 2021\n",
+    "* Two quarterly medians for Sentinel-1, one from August 2021 to October 2021, and the other from November 2021 to January 2022\n",
+    "* Three quarterly medians for all other products, one from August 2021 to October 2021, one from November 2021 to January 2022, and one from February 2022 to April 2022"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c618c6a2-079a-4a1e-9131-9e7059df2c16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annual_geomedian_times = {\n",
+    "    \"annual_2021\": \"2021-01-01\",\n",
+    "}\n",
+    "\n",
+    "semiannual_geomedian_times = {\n",
+    "    \"semiannual_2021_01\": \"2021-01-01\",\n",
+    "    \"semiannual_2021_06\": \"2021-06-01\",\n",
+    "}\n",
+    "\n",
+    "s1_time_ranges = {\n",
+    "    \"Q3_2021\": slice(\"2021-08-01\", \"2022-10-31\"),\n",
+    "    \"Q4_2021\": slice(\"2021-11-01\", \"2022-01-31\"),\n",
+    "}\n",
+    "\n",
+    "time_ranges = {\n",
+    "    \"Q3_2021\": slice(\"2021-08-01\", \"2022-10-31\"),\n",
+    "    \"Q4_2021\": slice(\"2021-11-01\", \"2022-01-31\"),\n",
+    "    \"Q1_2022\": slice(\"2022-02-01\", \"2022-04-30\"),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1e166f0-2e9d-46a9-9c95-da2ff4a98a70",
+   "metadata": {},
+   "source": [
+    "Next, set the spatial requirements for your query, specifically the resolution and desired output CRS."
    ]
   },
   {
@@ -230,32 +330,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_date = single_crops_subset.start.min()\n",
-    "end_date = single_crops_subset.end.max()\n",
-    "\n",
-    "query_start_date = pd.Timestamp(\n",
-    "    year=start_date.year, month=start_date.month, day=1\n",
-    ") - pd.DateOffset(months=9)\n",
-    "query_end_date = pd.Timestamp(\n",
-    "    year=start_date.year, month=start_date.month, day=1\n",
-    ") - pd.DateOffset(minutes=1)\n",
-    "print(f\"Query start: {query_start_date}\")\n",
-    "print(f\"Query end: {query_end_date}\")\n",
-    "\n",
-    "# Write a general query\n",
-    "time = (query_start_date, query_end_date)\n",
     "resolution = (-10, 10)\n",
-    "output_crs = \"EPSG:6933\"\n",
-    "\n",
+    "output_crs = \"EPSG:6933\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c0b029f-7615-49de-b866-4fd6a9b4c6d1",
+   "metadata": {},
+   "source": [
+    "Finally, add all elements to the query dictionary, and save for later use."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1773e87d-eac5-43e7-b5d7-ec207ccafe57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "query = {\n",
-    "    \"time\": time,\n",
+    "    \"annual_geomedian_times\": annual_geomedian_times,\n",
+    "    \"semiannual_geomedian_times\": semiannual_geomedian_times,\n",
+    "    \"s1_time_ranges\": s1_time_ranges,\n",
+    "    \"time_ranges\": time_ranges,\n",
     "    \"resolution\": resolution,\n",
     "    \"output_crs\": output_crs,\n",
     "}\n",
     "\n",
     "# Export query to pickle file for future re-use\n",
     "with open('results/query.pickle', 'wb') as f:\n",
-    "    pickle.dump(query, f)\n"
+    "    pickle.dump(query, f)"
    ]
   },
   {
